[project]
name = "20251110"
version = "0.1.0"
description = "Data science experiments repository"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "scikit-learn>=1.5.0",
    "jupyter>=1.1.0",
    "ipython>=8.26.0",
    "python-dotenv>=1.0.0",
    "psycopg2-binary>=2.9.0",
    "lightgbm>=4.0.0",
    "onnx>=1.15.0",
    "onnxruntime>=1.16.0",
    "skl2onnx>=1.16.0",
    "onnxmltools>=1.12.0",
    "onnxconverter-common>=1.14.0",
    "structlog>=24.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["experiments"]
